<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_list_name"
        android:layout_width="472dp"
        android:layout_height="97dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/seance"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--android:layout_height="340dp"-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listTask"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="56dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_list_name"
        app:layout_constraintBottom_toTopOf="@+id/submit_area"
        />

    <LinearLayout
        android:id="@+id/submit_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/edt_add_task"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:text="@string/exercice_name"
            android:inputType="textPersonName"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/btn_submit_task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/exercice_add" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>