<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="95dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/home_seance"
        android:textColor="@color/bluePrimary"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--android:layout_height="340dp"-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listToDo"
        android:layout_width="420dp"
        android:layout_height="444dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingLeft="10dp"
        android:paddingBottom="56dp"
        app:layout_constraintBottom_toTopOf="@+id/submit_area"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:id="@+id/submit_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/nav_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/edt_add_list"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/training_name"
            android:textColorHint="@color/bluePrimary"
            android:inputType="textPersonName"
            android:textSize="18dp" />

        <Button
            android:id="@+id/btn_submit_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/training_add" />

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="@color/bluePrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>